--- a/.github/workflows/scheduled_request.yml
+++ b/.github/workflows/scheduled_request.yml
@@ -1,12 +1,23 @@
-name: Scheduled GET Request
-
+# This is a basic workflow to help you get started with Actions
+ 
+name:
+    First Cron Job
+   
+    # Controls when the workflow will run
 on:
+    # Triggers the workflow every 5 minutes
     schedule:
-    - cron: '*/5 * * * *'
-
+      - cron: "*/5 * * * *"
+   
+        # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-    request-job:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Make GET request
-              run: curl -X GET "https://ai-academy.onrender.com"
+    # This workflow contains a single job called "cron"
+    cron:
+      # The type of runner that the job will run on
+      runs-on: ubuntu-latest
+   
+      # Steps represent a sequence of tasks that will be executed as part of the job
+      steps:
+        # Runs a single command using the runners shell
+        - name: Run a one-line script
+          run: curl -X GET "https://ai-academy.onrender.com"
